# PentNote

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  KNOWN_ISSUES.md  LICENSE  README.md  SECURITY.md  USAGE.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
demo/: README.md  setup.sh
examples/plugin_example/: README.md  pyproject.toml
examples/plugin_example/myparser/: __init__.py  parser.py
examples/plugin_example/tests/: test_parser.py
pentnote/: __init__.py  cli.py  runner.py
pentnote/ai/: __init__.py  ollama.py
pentnote/core/: __init__.py  cracking.py  deduplicator.py  engagement.py  engine.py  fileio.py  init_engine.py  models.py  terminal.py
pentnote/evidence/: __init__.py  linker.py  ocr.py  screenshot.py
pentnote/generators/: __init__.py  index.py  markdown.py  report.py  timeline.py
pentnote/ghostlog/: __init__.py  apply.py  daemon.py  llm.py  sanitize.py
pentnote/graph/: __init__.py  bloodhound.py  canvas.py  layout.py
pentnote/mitre/: __init__.py  chain_detector.py  classifier.py  coverage.py  defends.py  navigator.py  next_steps.py  scorer.py
pentnote/mitre/data/: __init__.py  chains.json  enterprise-attack.json  rules.json
pentnote/models/: __init__.py  finding.py
pentnote/parsers/: __init__.py  base.py  detector.py  universal.py
pentnote/parsers/c2/: __init__.py  base.py  generic.py  havoc.py  registry.py  sliver.py
pentnote/parsers/v1/: __init__.py  crackmapexec.py  impacket.py  nmap.py
pentnote/parsers/v15/: __init__.py  bloodhound.py  feroxbuster.py  gobuster.py  kerbrute.py  ldapdomaindump.py
pentnote/parsers/v2/: __init__.py  bloodyad.py  certipy.py  enum4linux.py  evilwinrm.py  lazagne.py  mimikatz.py  nikto.py  nuclei.py  peas.py  powerview.py  responder.py  rubeus.py  (+3 more)
pentnote/payloads/: __init__.py  context.py  lotl.py  render.py
pentnote/plugins/: __init__.py  loader.py
pentnote/sync/: __init__.py  conflicts.py  git.py  ignore.py  watcher.py
pentnote/templates/: credential.md.j2  domain_object.md.j2  engagement.md.j2  finding.md.j2  host.md.j2  loot.md.j2  mitre_summary.md.j2  report.html.j2  report.md.j2  timeline.md.j2  tool_index.md.j2
pentnote/workspace/: __init__.py  creds.py  log.py  loot.py  notes.py  store.py
tests/: conftest.py  test_chain_detector.py  test_cli.py  test_deduplicator.py  test_engagement.py  test_fileio.py  test_generators.py  test_mitre.py  test_models.py  test_operator_edition.py  test_parsers.py  test_sync.py  test_terminal.py  test_workspace.py
tests/fixtures/: bloodhound_sample.json  bloodyad_shadowcreds.txt  certipy_find.txt  cme_krb5_artifact.txt  cme_sample.txt  enum4linux_full.txt  evilwinrm_ansi_capture.txt  evilwinrm_netuser_netgroup.txt  evilwinrm_sample.txt  feroxbuster_sample.txt  gobuster_sample.txt  impacket_sample.txt  kerbrute_sample.txt  lazagne_sample.txt  ldapdomaindump_sample.json  linpeas_sample.txt  mimikatz_logonpasswords.txt  nikto_sample.txt  nmap_long_script_line.xml  nmap_sample.xml  nuclei_sample.txt  powerview_sample.txt  rubeus_asreproast.txt  rubeus_kerberoast.txt  seatbelt_sample.txt  smbclient_dir.txt  smbclient_shares.txt  sqlmap_sample.txt  winpeas_sample.txt
