[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "pentnote"
version = "1.0.1"
description = "Automated pentest notes with MITRE ATT&CK, Ghost Log, and Obsidian integration"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "PentNote Contributors" }]
keywords = [
  "pentesting",
  "security",
  "mitre",
  "attck",
  "obsidian",
  "notes",
  "ctf",
  "red-team",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: System :: Systems Administration",
]
dependencies = [
  "click>=8.1",
  "jinja2>=3.1",
  "pyparsing>=3.1",
  "lxml>=5.0",
  "rich>=13.0",
  "pydantic>=2.0",
]

[project.optional-dependencies]
operator = [
  "networkx>=3.3",
  "numpy>=1.26",
  "mss>=9.0",
  "pillow>=10.0",
  "pytesseract>=0.3.10",
  "pexpect>=4.9; platform_system != 'Windows'",
  "ollama>=0.1",
  "GitPython>=3.1",
  "filelock>=3.15",
  "watchfiles>=0.22",
  "merge3>=0.0.15",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-timeout>=2.3",
  "ruff>=0.4",
  "black>=24.0",
  "mypy>=1.10",
]

[project.scripts]
pentnote = "pentnote.cli:main"

[project.urls]
Homepage = "https://github.com/A1GCH-afk/PentNote"
Repository = "https://github.com/A1GCH-afk/PentNote"
Documentation = "https://github.com/A1GCH-afk/PentNote#readme"
Issues = "https://github.com/A1GCH-afk/PentNote/issues"
Changelog = "https://github.com/A1GCH-afk/PentNote/blob/main/CHANGELOG.md"

[project.entry-points."pentnote.parsers"]

[tool.hatch.build.targets.wheel]
packages = ["pentnote"]

[tool.hatch.build.targets.sdist]
include = [
  "/pentnote",
  "/tests",
  "/docs",
  "/examples",
  "/README.md",
  "/CHANGELOG.md",
  "/CONTRIBUTING.md",
  "/LICENSE",
]

[tool.pytest.ini_options]
addopts = "-q --strict-markers -ra"
pythonpath = ["."]
testpaths = ["tests"]
timeout = 60

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["pentnote", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
packages = ["pentnote"]
ignore_missing_imports = true
ignore_errors = true
warn_unused_ignores = true
